syntax = "proto3";
package some_pkg;

message MessageB {
}
